changing simple.html from SIMPLE_CHANGE branch

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!Adding copyright access>
 <!DOCTYPE html>
 <head>
-	<title>An Example change</title>
+	<title>A Simple change</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
