--- a/simple.html
+++ b/simple.html
@@ -2,11 +2,11 @@
 <!Adding copyright access>
 <!DOCTYPE html>
 <head>
-	<title>A Simple change</title>
+	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
-			padding-top: 50px;
+			padding-top: 100px;
 			padding-bottom: 20px;
 		}
 	</style>
@@ -16,11 +16,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Son Goku
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; 2014 git training</p>
 	</footer>
 </body>
 </html>
