Simple.html from MASTER BRANCH

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!Adding copyright access>
 <!DOCTYPE html>
 <head>
-	<title>A Simple change</title>
+	<title>A Very Good Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,11 +16,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			bla bla bla
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; 2014 Tushar KNP</p>
 	</footer>
 </body>
 </html>
