mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!Fast_Forward>
 <!Adding copyright access>
 <!DOCTYPE html>
+<!Adding changes for rebasing conflicts>
 <head>
 	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
