fb adding some trouble for simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!Fast_Forward>
 <!Adding copyright access>
 <!DOCTYPE html>
-<!Some silly changes from master branch>
+<!Adding changes for rebasing conflicts>
 <head>
-	<title>Silly changes on Master</title>
+	<title>Lots of trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Junk filler Content -->
 		<p>
-			Just stuff for now
+			Son Goku
 		</p>
 	</main>
 	<footer class="container">
