mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!Fast_Forward>
 <!Adding copyright access>
 <!DOCTYPE html>
-<!Adding changes for rebasing conflicts>
+<!Some silly changes from master branch>
 <head>
-	<title>A Great Website</title>
+	<title>Silly changes on Master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,13 +15,13 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk filler Content -->
 		<p>
-			Son Goku
+			Just stuff for now
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; 2014 Tushar KNP</p>
+		<p>&copy; 2014 Happy Singh</p>
 	</footer>
 </body>
 </html>
