Simple.html : BIGTROUBLE branch

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <!Adding changes for rebasing conflicts>
 <head>
-	<title>Lots of trouble</title>
+	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
