Again : LOCAL GIT

--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; 2014 GIT Training</p>
+		<p>&copy; 2014 GIT Training NEW</p>
 	</footer>
 </body>
 </html>
