--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <!Adding changes for rebasing conflicts>
 <head>
-	<title>A Great Website</title>
+	<title>Title for Stash</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Junk filler Content -->
 		<p>
-			Son Goku
+			NO NP
 		</p>
 	</main>
 	<footer class="container">
