Updating for version 1.2

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <!Adding changes for rebasing conflicts>
 <head>
-	<title>Title for Branch Stash</title>
+	<title>Title for Tagging Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
